kubernetes/201/02.cats-dogs-ingress/01.ingress-basic.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cats-dogs
spec:
  rules:
  - host: "*.xip.io"
    http:
      paths:
      - backend:
          serviceName: cats
          servicePort: 9000
        path: /cats
      - backend:
          serviceName: dogs
          servicePort: 9000
        path: /dogs
